doc,test: modified sample codes in README.md and added those tests