@@ -93,6 +93,10 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.0.0-M7</version>
+        <configuration>
+          <!-- for changing environment variables in unit tests. -->
+          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
@@ -128,6 +132,10 @@
             </executions>
             <configuration>
               <fallback>false</fallback>
+              <!-- for changing environment variables in unit tests. -->
+              <buildArgs>
+                -J--add-opens=java.base/java.lang=ALL-UNNAMED
+              </buildArgs>
             </configuration>
           </plugin>
         </plugins>
